--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,14 @@
     <artifactId>Ronaldo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.12</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
